# agui-adk-bridge

./: .env.example  .gitignore  ACTIVITY_EVENT_ANALYSIS.md  CUSTOM_EVENTS_IMPLEMENTATION.md  DIRECT_PROTOCOL.md  FRONTEND_ENHANCEMENT_PLAN.md  NETWORK_ANALYSIS.md  README.md  SETUP.md  pyproject.toml  requirements.txt  run.sh  setup.sh
logs_backup/: LOG_COMPARISON.md  README.md  SESSION_ANALYSIS.md
src/: __init__.py  agent_engine_client.py  agent_engine_stream.py  config.py  main.py  main_direct.py  metadata_store.py  protocol_translator.py
