[project]
name = "agui-dojo-adk-bridge"
version = "0.1.0"
description = "Bridge app to connect Google Agent Engine deployments to AG-UI Dojo"
requires-python = ">=3.9, <3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-cloud-aiplatform>=1.60.0",
    "google-auth>=2.0.0",
    "httpx>=0.27.0",
    "ag_ui_adk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
]

[project.scripts]
dev = "src.main:run_dev"
start = "src.main:run_prod"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
# Point to the local ADK middleware for development
ag_ui_adk = { path = "../integrations/adk-middleware/python" }

